--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.5",
+    "@babel/plugin-proposal-private-property-in-object": "",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.2",
@@ -17,7 +18,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.1.3",
+    "typescript": "^4.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
